--- a/client/src/pages/layout/Navbar.css
+++ b/client/src/pages/layout/Navbar.css
@@ -1,11 +1,17 @@
 .todo-app-navbar {
   width: 100vw;
   padding: 0;
-  color: #898989;
   font-weight: 400;
-  background-color: #ffffff;
+  background-color: #174260;
+  margin-bottom: 10rem;
 }
 
-.tv2z-logo {
-  padding: 27px;
+.navbar-light .navbar-brand,
+.navbar-light .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #e7ecef;
 }
